--- a/4.embeddings/SemAxis_TODO.ipynb
+++ b/4.embeddings/SemAxis_TODO.ipynb
@@ -136,7 +136,7 @@
     "    \n",
     "    # your code here\n",
     "    \n",
-    "    # score should be a single real-value number (e.g., 0.2777)\n",
+    "    # score should be a single real-value number (e.g., 0.342)\n",
     "    return score"
    ]
   },
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# should be 0.2777\n",
+    "# should be 0.342\n",
     "get_semaxis_score(glove, positive_terms=[\"woman\", \"women\"], negative_terms=[\"man\", \"men\"], target_word=\"actress\")"
    ]
   },
@@ -227,7 +227,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -241,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
