fixed token bug

--- a/9.neural/PromptDesign.ipynb
+++ b/9.neural/PromptDesign.ipynb
@@ -65,6 +65,8 @@
     "    label_ids=[]\n",
     "    for label in labels:\n",
     "        token_ids=tokenizer.encode(label)\n",
+    "        # token labels (e.g., Spanish, English) must be 1 token in length\n",
+    "        assert len(token_ids) == 1\n",
     "        label_ids.append(token_ids[0])\n",
     "        \n",
     "    sorted_args=list(torch.argsort(probabilities[label_ids], descending=True))\n",
@@ -103,24 +105,24 @@
    "outputs": [],
    "source": [
     "prompt = \"\"\"X: Vampires take over the planet during an eclipse\n",
-    "Y: Horror\n",
+    "Y: Hor\n",
     "\n",
     "X: Two friends switch bodies and live each other's lives\n",
-    "Y: Comedy\n",
+    "Y: Com\n",
     "\n",
     "X: John turns into a werewolf during a full moon\n",
-    "Y: Horror\n",
+    "Y: Hor\n",
     "\n",
     "X: John is a werewolf who plays basketball\n",
-    "Y: Comedy\n",
+    "Y: Com\n",
     "\n",
     "X: A court sentences George to be Jerry's butler\n",
-    "Y: Comedy\n",
+    "Y: Com\n",
     "\n",
     "X: A virus outbreak turns everyone into zombies\n",
     "Y:\"\"\"\n",
     "\n",
-    "classify_with_prompt(prompt, [\"Horror\", \"Comedy\"])"
+    "classify_with_prompt(prompt, [\"Hor\", \"Com\"])"
    ]
   },
   {
